[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
actix-files = "0.6.0-beta.8"
actix-http = "3.0.0-beta.11"
actix-web-httpauth = "0.6.0-beta.3"
actix-cors = "0.6.0-beta.3"
actix-session = "0.5.0-beta.3"

serde = "1.0.130"
serde_json = "1.0.69"

log = "0.4.14"
pretty_env_logger = "0.4.0"
config = "0.11.0"